# OHLC-TS

./: .gitignore  CMakeLists.txt  README.md  config.json  dump.rdb  vector_message.proto
rawdata/__MACOSX/: ._subsetdata
rawdata/subsetdata/: 2022-11-10-1668042139551695521.ndjson  2022-11-10-1668045540914262761.ndjson  2022-11-10-1668045541313275157.ndjson  2022-11-10-1668045541714723976.ndjson  2022-11-10-1668045543863383712.ndjson  2022-11-10-1668045544952500951.ndjson  2022-11-10-1668045545335547936.ndjson  2022-11-10-1668045545862790453.ndjson  2022-11-10-1668045600456870453.ndjson  2022-11-10-1668045600941892701.ndjson  2022-11-10-1668045601431027669.ndjson  2022-11-10-1668045602893621208.ndjson  2022-11-10-1668045603568573923.ndjson  2022-11-10-1668045603874765175.ndjson  2022-11-10-1668045604127209236.ndjson  2022-11-10-1668045604575614170.ndjson  2022-11-10-1668045605070033811.ndjson  2022-11-10-1668045605658316698.ndjson  2022-11-10-1668045606702077990.ndjson  2022-11-10-1668045607192868673.ndjson  2022-11-10-1668045607730901747.ndjson  2022-11-10-1668045608246865732.ndjson  2022-11-10-1668045608768580708.ndjson  2022-11-10-1668045609357506894.ndjson  2022-11-10-1668045610368173998.ndjson  2022-11-10-1668045611033836820.ndjson  2022-11-10-1668045611551724838.ndjson  2022-11-10-1668045612039173942.ndjson  2022-11-10-1668045612541872073.ndjson  2022-11-10-1668045613087871105.ndjson  2022-11-10-1668045614190672390.ndjson  2022-11-10-1668045614692841754.ndjson  2022-11-10-1668045615493525599.ndjson  2022-11-10-1668045618077048808.ndjson  2022-11-10-1668045621226692890.ndjson  2022-11-10-1668045624166636888.ndjson  2022-11-10-1668045633497261349.ndjson  2022-11-10-1668045644580236990.ndjson  2022-11-10-1668045655175419092.ndjson  2022-11-10-1668045664725817873.ndjson  (+296 more)
src/: main.cpp
src/kafka/: consumer.cpp  producer.cpp
src/kafka/config_json/: config_json.cpp  config_json.hpp
src/kafka/grpc-lib/: grpc-lib.cpp  grpc-lib.hpp
src/lib/: ohlc_calculator.cpp  ohlc_calculator.hpp
src/lib/data/: parse_data.cpp  parse_data.hpp
tests/: test.cpp
